@@ -1,1 +1,0 @@
-Fujitsu Stylistic Tablet PC input driver for the Xorg X server.
