@@ -1,5 +1,0 @@
-$NetBSD: distinfo,v 1.4 2021/10/26 11:34:39 nia Exp $
-
-BLAKE2s (xf86-input-fpit-1.4.0.tar.bz2) = d2fb5725361bb1a911fa2edf5965d22b33a9a9a74630f2a87d7d3564ee007f84
-SHA512 (xf86-input-fpit-1.4.0.tar.bz2) = 3e67704759cfeee8fb2f67afe2956c1f8805c33fa063c357caf317b91e42d37c7ba789f4b84fa481fa0f23fea627f38698a0036a8c59a0e54973b22d265bf1f7
-Size (xf86-input-fpit-1.4.0.tar.bz2) = 277843 bytes
